Fixed stress transformation order

--- a/src/pages/sol/pressure_vessels.astro
+++ b/src/pages/sol/pressure_vessels.astro
@@ -20,7 +20,8 @@ import BlueText from "../../components/BlueText.astro"
 		
 			<ul class='list-group list-group-flush py-0'> 
 				<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#cylindrical-vessels'>Cylindrical Vessels</a></li> 
-				<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#spherical-vessels'>SphericalVessels</a></li>  
+				<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#spherical-vessels'>SphericalVessels</a></li>
+				<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#radial-stress'>Radial Stress</a></li>  
 			</ul>
 		</li>
 	</ul>
